--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-responsive-modal": "^6.4.2",
